# siberia

./: .gitignore  CMakeLists.txt  README.md
res/: icon.xpm  tool-new-script.xpm  tool-open.xpm
src/: main.cpp  main_menu_bar.cpp  main_menu_bar.h  main_status_bar.cpp  main_status_bar.h  main_tool_bar.cpp  main_tool_bar.h  main_window.cpp  main_window.h
